test: SonarCloud cleanup batch — fix S5845/S8745 bugs; suppress by-design S1104/S8694; apply S1612/S6204/S6126/S7158 auto-fixes